Fix: z-index footer

--- a/public/css/customize_semantic.css
+++ b/public/css/customize_semantic.css
@@ -110,6 +110,7 @@ footer {
 	bottom: 0;
 	position: fixed;
 	width: 100%;
+	z-index: 10;
 }
 
 footer p {
